# traj-opt-subdivision

./: CMakeLists.txt  README.md  commit.sh  debugPathPlanning3D.cpp
Config File/: 3D.json
HighOrderCCD/: Distance.h  Distance_der.h  Energy.h  Gradient.h  Step.h  Subdivide.h
HighOrderCCD/BVH/: BVH.cpp  BVH.h
HighOrderCCD/BVH/src/: AABB.cc  AABB.h
HighOrderCCD/CCD/: CCD.h
HighOrderCCD/Config/: Config.cpp  Config.h
HighOrderCCD/Optimization/: Optimization3D_point.h  Optimization3D_time.h
cmake/: LoadLibs.cmake
cmake/modules/: FindLIBIGL.cmake  LoadLibs.cmake
